# cse220hw3

./: CMakeLists.txt
images/originals/: building1.ppm  building2.ppm  dog.ppm  eagle.ppm  einstein1.ppm  einstein2.ppm  i376.ppm  lopsided.ppm  readme.txt  smileyface.ppm  statue.ppm  times_square.ppm  tiny.ppm  wolfie-tiny.ppm  wolfie.ppm
include/: image.h  qtree.h
src/: hw3_main.c  image.c  qtree.c
tests/expected/: save_qtree_as_ppm1.ppm
tests/include/: tests_utils.h
tests/input/: load_preorder_qt1_qtree.txt
tests/src/: tests_utils.c
